RESOLVED FIXED104575
Caused crashes in v8. Rolling out until abarth can fix. See cr-issue 165136 for more info
https://bugs.webkit.org/show_bug.cgi?id=104575
Summary Caused crashes in v8. Rolling out until abarth can fix. See cr-issue 165136...
Eric Seidel (no email)
Reported 2012-12-10 10:50:40 PST
Caused crashes in v8. Rolling out until abarth can fix. See cr-issue 165136 for more info
Attachments
Patch (6.47 KB, patch)
2012-12-10 10:51 PST, Eric Seidel (no email)
no flags
Eric Seidel (no email)
Comment 1 2012-12-10 10:51:26 PST
WebKit Review Bot
Comment 2 2012-12-10 11:32:22 PST
Comment on attachment 178589 [details] Patch Clearing flags on attachment: 178589 Committed r137190: <http://trac.webkit.org/changeset/137190>
WebKit Review Bot
Comment 3 2012-12-10 11:32:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.